--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5",
     "react-use-cart": "^1.14.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
